Migrated from FamilySearchElements and renamed the component
The component was renamed from `birch-overflow-menu` to
`fs-overflow-menu`.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "birch-overflow-menu",
-  "main": "birch-overflow-menu.html",
+  "name": "fs-overflow-menu",
+  "main": "fs-overflow-menu.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "fs-styles": "fs-webdev/fs-styles#2.x"
